chore(): add prepublish script

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ds:storybook:generate": "pnpm --filter fintual-ui storybook-generate",
     "ds:build-storybook": "pnpm --filter fintual-ui build-storybook",
     "ds:bump": "pnpm --filter fintual-ui bump",
+    "ds:prepublish": "pnpm --filter fintual-ui prepublish",
     "ds:publish": "pnpm --filter fintual-ui publish",
     "mobile:start": "pnpm --filter mobile start",
     "mobile:ios": "pnpm --filter mobile ios",
