feat(ds): add chromatic for deploy

--- a/packages/fintual-ds/package.json
+++ b/packages/fintual-ds/package.json
@@ -91,6 +91,7 @@
     "@storybook/react-native-web-vite": "^10.0.0",
     "@types/react": "~19.1.10",
     "babel-plugin-react-docgen-typescript": "^1.5.1",
+    "chromatic": "^13.3.4",
     "cross-env": "^10.0.0",
     "storybook": "^10.0.0",
     "typescript": "~5.9.2",
