--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "node": ">=18.0.0",
     "pnpm": ">=9.0.0"
   },
-  "packageManager": "pnpm@9.0.0"
+  "packageManager": "pnpm@9.0.0",
+  "pnpm": {
+    "overrides": {
+      "@types/react-dom": "~19.1.0"
+    }
+  }
 }
