--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "fintual-ui": "^1.0.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-web": "^0.21.2",
     "vite-plugin-rnw": "^0.0.10"
@@ -20,8 +20,8 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "~19.1.0",
+    "@types/react-dom": "~19.1.0",
     "@types/react-native-web": "^0.19.2",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
