--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo start --android --clear",
+    "ios": "expo start --ios --clear",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -27,7 +27,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
-    "fintual-ui": "^1.0.5",
+    "fintual-ui": "workspace:*",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
